# hw3

./: heap.h  llrec-test.cpp  llrec.cpp  llrec.h  stack.h
hw3_tests/: CMakeCache.txt  CMakeLists.txt  Makefile  logicsim
hw3_tests/heap_tests/: heap_tests
hw3_tests/llrec_tests/: CMakeLists.txt  Makefile  llrec_tests
hw3_tests/stack_tests/: stack_tests
logicsim/: circuit.cpp  event.h  gate.cpp
